--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:test": "cross-env NODE_ENV=test node index.js",
-    "start": "cross-env NODE_ENV=development node index.js"
+    "start": "cross-env NODE_ENV=test node index.js"
   },
   "keywords": [],
   "author": "",
